hphp/hack/test/typecheck/using/using_bad_syntax_2.php.exp
File "using_bad_syntax_2.php", line 15, characters 5-28:
Using statement in function scoped form may only be used at the top level of a function or a method (Parsing[1002])
